--- a/frontend/frontend/app/item-list/components/item-list/item-list.component.html
+++ b/frontend/frontend/app/item-list/components/item-list/item-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  item-list works!
-</p>
+<div *ngFor="let item of sortedItems; trackBy: idFn">
+  {{item.title}}
+</div>
+<!--<awrss-item-list-element *ngFor="let item of data.items.slice().reverse(); trackBy: idFn">
+</awrss-item-list-element> -->
