More work on the new frontend, it's almost usable.
Switch testing browser to chromium since I don't actually use chromium.

Remove the Item/Feed services that were never used.

Move frontend entity definitions into one file.

Create new mutate and loading services.

--- a/frontend/frontend/app/item-list/components/item-list/item-list.component.html
+++ b/frontend/frontend/app/item-list/components/item-list/item-list.component.html
@@ -1,5 +1,2 @@
-<div *ngFor="let item of sortedItems; trackBy: idFn">
-  {{item.title}}
-</div>
-<!--<awrss-item-list-element *ngFor="let item of data.items.slice().reverse(); trackBy: idFn">
-</awrss-item-list-element> -->
+<awrss-item-list-element *ngFor="let item of sortedItems" [item]="item">
+</awrss-item-list-element>
