--- a/frontend/frontend/styles.scss
+++ b/frontend/frontend/styles.scss
@@ -1,3 +1,13 @@
+@import 'variables';
+
+// html,
+// body,
+// awrss-root,
+// mat-sidenav-container {
+//   height: 100%;
+//   background-color: mat-color($primary);
+// }
+
 [mat-button] {
   text-transform: uppercase;
 }
