--- a/frontend/frontend/app/main-view/components/main-view/main-view.component.html
+++ b/frontend/frontend/app/main-view/components/main-view/main-view.component.html
@@ -5,6 +5,7 @@
   <awrss-item *cdkVirtualFor="let item of sortedItems; let even = even; let odd = odd"
               [item]="item"
               [showFeed]="!feed"
+              [showCategory]="!category && !feed"
               [class.primary-bg]="odd"
               [class.secondary-bg]="even">
   </awrss-item>
