--- a/frontend/frontend/app/nav/components/nav/nav.component.scss
+++ b/frontend/frontend/app/nav/components/nav/nav.component.scss
@@ -1,10 +1,16 @@
 :host {}
 
 .header {
+  display: flex;
   position: fixed;
   width: 200px;
 }
 
 .has-header {
   margin-top: 100px;
+}
+
+.title {
+  flex: 1 1 auto;
+  margin: 8px 0 0;
 }
