Categories working in the nav component. Moved invalid redirects to the nav bar.

--- a/frontend/frontend/app/app.component.html
+++ b/frontend/frontend/app/app.component.html
@@ -11,6 +11,7 @@
     <span class="filler"></span>
     <button (click)="refresh()"
             aria-label="Refresh"
+            [disabled]="isRefreshing()"
             mat-icon-button>
       <mat-icon>refresh</mat-icon>
     </button>
