--- a/frontend/frontend/app/nav/components/nav/nav.component.html
+++ b/frontend/frontend/app/nav/components/nav/nav.component.html
@@ -10,6 +10,7 @@
   </div>
   <button (click)="refresh()"
           aria-label="Refresh"
+          [disabled]="isRefreshing()"
           mat-icon-button
           mat-button-right>
     <mat-icon>refresh</mat-icon>
