--- a/frontend/frontend/app/main-view/components/main-view/main-view.component.html
+++ b/frontend/frontend/app/main-view/components/main-view/main-view.component.html
@@ -12,7 +12,7 @@
 </cdk-virtual-scroll-viewport>
 
 
-<!-- real scrolling is slow, but it allows for browser searching. Use with date ranges -->
+<!-- real scrolling is slow, but it allows for browser searching. Use with date ranges? -->
 <!-- <div class="item&#45;list"> -->
 <!--   <awrss&#45;item *ngFor="let item of sortedItems; let even = even; let odd = odd" -->
 <!--               [item]="item" -->
