--- a/frontend/frontend/app/nav/components/nav/nav.component.scss
+++ b/frontend/frontend/app/nav/components/nav/nav.component.scss
@@ -1,16 +1,111 @@
-:host {}
+@import 'variables';
 
 .header {
   display: flex;
   position: fixed;
   width: 200px;
+  white-space: nowrap;
+  z-index: 2;
+
+
+  .unread,
+  .title {
+    margin: 7px 0 0;
+  }
+
+  .unread {
+    flex: 1 1 auto;
+    margin-left: 4px;
+  }
+
+  .title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
-.has-header {
-  margin-top: 100px;
+.home-link {
+  margin-right: 40px;
+  padding: 4px;
 }
 
-.title {
+.home-link {
+  padding-right: 40px;
+
+  &.has-header {
+    padding-right: 0;
+    margin-top: 40px;
+  }
+}
+
+.link {
+  color: white;
+  display: flex;
+  margin: 0;
+  padding: 2px 0;
+  overflow: hidden;
+  text-decoration: unset;
   flex: 1 1 auto;
-  margin: 8px 0 0;
+
+  .spacer {
+    flex: 1 1 auto;
+  }
+
+  &:hover .title {
+    text-decoration: underline;
+  }
+}
+
+.home-link {
+  display: flex;
+  padding: 4px;
+  width: auto;
+
+  &.active {
+    background-color: mat-color($primary, lighter);
+
+    .link {
+      color: black;
+    }
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+.body {
+  padding-right: 40px;
+  min-width: 200px;
+
+  &.has-header {
+    box-sizing: border-box;
+    min-height: 100%;
+    padding-top: 40px;
+    padding-right: 0;
+  }
+}
+
+.category {
+  border-radius: 0;
+  margin-bottom: 8px;
+
+  &.should-hide {
+    display: none;
+
+    &.active {
+      display: block
+    }
+  }
+}
+
+.uncategorized-target {
+  background-color: mat-color($primary, darker);
+  margin: 0;
+  padding: 84px 0;
+  text-align: center;
+}
+
+.cdk-drop-list-dragging.not-dragging.category {
+  transform: none !important;
 }
