Display time spent failing and time since last new item in the nav.
Stop sorting the nav after every change, only those which require it and
refreshes.

Fix a bunch of issues with dragging and dropping feeds and categories.

Everything works on desktop, and everything except moving feeds from
inside a category works on mobile. I hate Angular's drag and drop.

--- a/frontend/frontend/app/app.component.html
+++ b/frontend/frontend/app/app.component.html
@@ -7,14 +7,14 @@
             mat-icon-button>
       <mat-icon>menu</mat-icon>
     </button>
-    <h1>
+    <h1 class="header">
       <div class="title">{{title}}</div>
+      <div class="spacer"></div>
       <div class="unread"
            *ngIf="unread">
         ({{unread}})
       </div>
     </h1>
-    <span class="filler"></span>
     <button (click)="refresh()"
             aria-label="Refresh"
             [disabled]="isRefreshing()"
