--- a/frontend/frontend/variables.scss
+++ b/frontend/frontend/variables.scss
@@ -4,7 +4,7 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $awrss-primary: mat-palette($mat-grey);
-$awrss-accent: mat-palette($mat-indigo);
+$awrss-accent: mat-palette($mat-deep-orange);
 
 // The warn palette is optional (defaults to red).
 // $awrss-warn:    mat-palette($mat-red);
