--- a/frontend/app/nav/components/feed/feed.component.html
+++ b/frontend/app/nav/components/feed/feed.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="spacer"></div>
     <div class="time"
-         matTooltip="{{fd.feed.failingSince | date:'yyyy-MM-dd HH:mm'}}"
+         matTooltip="Failing since {{fd.feed.failingSince | date:'yyyy-MM-dd HH:mm'}}"
          *ngIf="fd.feed.failingSince">
       ({{fd.failingSinceString}})
     </div>
@@ -23,7 +23,7 @@
       ({{fd.unread.size}})
     </div>
     <div class="time"
-         matTooltip="{{fd.lastItem | date:'yyyy-MM-dd HH:mm'}}"
+         matTooltip="Last new item {{fd.lastItem | date:'yyyy-MM-dd HH:mm'}}"
          *ngIf="!fd.feed.failingSince && !fd.unread.size && fd.lastItem">
       ({{fd.lastItemString}})
     </div>
