Just disable drag and drop on mobile.
I won't be confident in it without a lot of work. It seems usable on
desktop. I might need an admin page anyway, or I can just use a mouse
like a human being.

--- a/frontend/app/app.component.html
+++ b/frontend/app/app.component.html
@@ -30,7 +30,7 @@
                  [fixedTopGap]="mobileQuery.matches ? 56 : 0"
                  fixedInViewport
                  disableClose>
-      <awrss-nav [showHeader]="!mobileQuery.matches"
+      <awrss-nav [isMobile]="mobileQuery.matches"
                  (unreadCount)="unread = $event"
                  (pageTitle)="title = $event">
       </awrss-nav>
