--- a/frontend/app/nav/components/nav/nav.component.scss
+++ b/frontend/app/nav/components/nav/nav.component.scss
@@ -1,10 +1,10 @@
 @import 'variables';
 
 // TODO - remove https://github.com/angular/material2/pull/14732
-.home-link,
+/*.home-link,
 .body {
   margin-right: 60px;
-}
+}*/
 
 .header {
   display: flex;
